--- a/publishing/index.html
+++ b/publishing/index.html
@@ -51,6 +51,9 @@
   </head>
 
   <body>
+    <div class="header-popup">
+      안녕하세요
+    </div>
     <!--header start-->
     <header class="head-section">
       <div class="navbar navbar-default navbar-static-top container">
@@ -76,6 +79,12 @@
                           </li>
                           <li>
                             <a href="Contacts.html">오시는길</a>
+                          </li>
+                          <li>
+                            <a href="Introduce-Card-Local.html">국가자격증취득-내국인</a>
+                          </li>
+                          <li>
+                            <a href="Introduce-Card-Foreigner.html">국가자격증취득-외국인</a>
                           </li>
                           <li class="dropdown-submenu">
                             <a href="#" tabindex="-1">국가자격증취득</a>
@@ -239,7 +248,7 @@
       </div>
     </header>
     <!--header end-->
-
+    
     <!-- Sequence Modern Slider -->
     <div id="da-slider" class="da-slider">
 
@@ -446,7 +455,7 @@
               
             </p>
             <hr>
-            <a href="javascript:;" class="btn btn-purchase">
+            <a href="Online-Consulting.html" class="btn btn-purchase">
               상담신청&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp》 <!--Contact랑 연결-->
             </a>
           </div>
@@ -783,44 +792,44 @@
           <ul class="bxslider1 clients-list">
             <li>
               <a href="#">
-                <img src="img/clients/partner1-img-black.png" alt="국민건강보험공단b" />
+                <img src="img/clients/partner-img1-black.png" alt="국민건강보험공단b" />
 
-                <img src="img/clients/partner1-img-color.png" class="color-img" alt="국민건강보험공단c" />
+                <img src="img/clients/partner-img1-color.png" class="color-img" alt="국민건강보험공단c" />
               </a>
             </li>
             <li>
               <a href="#">
-                <img src="img/clients/partner3-img-black.png" alt="고용노동부b" />
+                <img src="img/clients/partner-img2-black.png" alt="고용노동부b" />
 
-                <img src="img/clients/partner3-img-color.png" class="color-img" alt="고용노동부c"/>
+                <img src="img/clients/partner-img2-color.png" class="color-img" alt="고용노동부c"/>
               </a>
             </li>
             <li>
               <a href="#">
-                <img src="img/clients/partner2-img-black.png" alt="노인장기요양보험b" />
+                <img src="img/clients/partner-img3-black.png" alt="노인장기요양보험b" />
 
-                <img src="img/clients/partner2-img-color.png" class="color-img" alt="노인장기요양보험c" />
+                <img src="img/clients/partner-img3-color.png" class="color-img" alt="노인장기요양보험c" />
               </a>
             </li>
             <li>
               <a href="#">
-                <img src="img/clients/partner4-img-black.png" alt="직업포털훈련b" />
+                <img src="img/clients/partner-img4-black.png" alt="직업포털훈련b" />
 
-                <img src="img/clients/partner4-img-color.png" class="color-img" alt="직업포털훈련c" />
+                <img src="img/clients/partner-img4-color.png" class="color-img" alt="직업포털훈련c" />
               </a>
             </li>
             <li>
               <a href="#">
-                <img src="img/clients/partner5-img-black.png" alt="워크넷b" />
+                <img src="img/clients/partner-img5-black.png" alt="워크넷b" />
 
-                <img src="img/clients/partner5-img-color.png" class="color-img" alt="워크넷c" />
+                <img src="img/clients/partner-img5-color.png" class="color-img" alt="워크넷c" />
               </a>
             </li>
             <li>
               <a href="#">
-                <img src="img/clients/partner6-img-black.png" alt="안산시일자리센터b" />
+                <img src="img/clients/partner-img6-black.png" alt="안산시일자리센터b" />
 
-                <img src="img/clients/partner6-img-color.png" class="color-img" alt="안산시일자리센터c" />
+                <img src="img/clients/partner-img6-color.png" class="color-img" alt="안산시일자리센터c" />
               </a>
             </li>
 
@@ -865,7 +874,7 @@
                   <div class="copyright">
                     <img src="img/footer-img1.png" width="50px"height="50px" />
                     <p class="copyright-detail-fonts">드림요양보호사교육원이 궁금하시다면 온라인 상담신청하세요.</p>
-                    <button class="btn btn-default btn-lg footer-btn-detail">상담예약하기</button>
+                    <button class="btn btn-default btn-lg footer-btn-detail"><a href="Online-Consulting.html">상담예약하기</a></button>
                   </div>
                 </div>
             </div>
