--- a/publishing/Introduce-Card-Foreigner.html
+++ b/publishing/Introduce-Card-Foreigner.html
@@ -28,7 +28,7 @@
       <!-- Custom styles for this template -->
     <link href="css/style.css" rel="stylesheet">
     <link href="css/style-responsive.css" rel="stylesheet" />
-    <link href="css/Introduce-Card-Local.css" rel="stylesheet" />
+    <link href="css/Introduce-Card-Foreigner.css" rel="stylesheet" />
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 tooltipss and media queries -->
     <!--[if lt IE 9]>
@@ -250,15 +250,14 @@
     <div class="breadcrumbs">
         <div class="container">
             <div class="row">
-                <div class="col-lg-4 col-sm-4">
-                    <h1>국비지원(국민내일배움카드 운영안내)</h1>
+                <div class="col-lg-6 col-sm-4">
+                    <h1>국비지원(국민내일배움카드 운영안내) - 외국인</h1>
                 </div>
-                <div class="col-lg-8 col-sm-8">
+                <div class="col-lg-6 col-sm-8">
                     <ol class="breadcrumb pull-right topmenu-set">
-                        <li class="active">국민내일배움카드란?</li>
-                        <li class="active"><a href="#target-people">지원대상</a></li>
-                        <li class="active"><a href="#support-limit">지원한도</a></li>
-                        <li class="active"><a href="#apply-how">신청방법</a></li>
+                        <li class="active">외국인 근로자</li>
+                        <li class="active"><a href="#married-dtl">결혼 이민자</a></li>
+                        <li class="active"><a href="#visa-dtl">비자의 종류</a></li>
                     </ol>
                 </div>
             </div>
@@ -268,7 +267,7 @@
 
     <div class="container contents1">
         <div class="col-lg-12 main-title-p">
-            <p>국민내일배움카드란?</p>
+            <p>외국인 내일배움카드 발급조건</p>
         </div>
         <div class="col-lg-12 dtl-contents1-box1">
             <p>카드 한 장으로 시작하는 다양한 훈련, 국민내일배움카드</p>
@@ -308,145 +307,70 @@
     </div>
 
 
-    <div class="container common-contents-box" id="target-people">
+    <div class="container common-contents-box">
         <div class="col-lg-12 common-title">
             <p>지원대상</p>
         </div>
         <div class="col-lg-12 common-title2">
-            <p>국민 누구나 신청 가능</p>
+            <p>
+                1<br>
+                고용보험에 가입된 적이 있는 외국인 근로자<br>
+                (고용보험 당연적용 비자)
+            </p>
         </div>
         <div class="col-lg-12 common-desc">
-            ※다만, 현직 공무원, 사립학교 교직원, 졸업예정학년이 아닌 고등학교 재학생, 졸업까지의 수업연한이 2년을 초과하여,<br>
-            남은 대학재학생, 연 매출 1억5천만원 이상의 자영업자, 월 임금 300만원 이상인 대규모기업종사자(45세미만),<br>
-            월평균소득 300만원 이상인 특수형태근로종사자 등은 제외
+            ● 고용보험법 시행령 제3조(적용제외 근로자)에 의거하여 피보험자격을 취득했었고 현재 실업자로서<br>
+                직업안정기관에 구직등록을 한 경우(직접방문)
         </div>
-    </div>
-
-    <div class="container common-contents-box" id="support-limit">
-        <div class="col-lg-12 common-title">
-            <p>지원한도</p>
+        <div class="col-lg-12 common-desc common-desc2">
+            ● 현재 고용보험 가입된 외국인도 신청 가능<br>
+            ● 실업자: 고용보험 가입이력이 있으면서 현재 실업자인 상태<br>
+            ● 근로자 : 현 고용보험 가입이 된 근로자
         </div>
-        <div class="col-lg-12 common-title2">
-            <p>1인 300~500만원까지, 훈련비의 45~85% 지원</p>
+        <div class="col-lg-12 common-desc common-desc2">
+            <div class="caution">※ 고용보험가입 이력이 없는 외국인은 카드 발급 불가</div>
+            단, 결혼이민(F-6)은 고용보험가입이력이 없는 실업상태여도 내일배움카드발급 가능
         </div>
-        <div class="col-lg-12 common-desc">
-            ※ 국민취업제도 Ⅰ 유형 및 Ⅱ 형 특정계층 참여자는<br>
-            훈련비의 100% 또는 80%를,<br>
-            국민취업지원제도 Ⅱ 유형중 청ㆍ중장년층 참여자는 50~85%를, 근로장려금(EITC)<br>
-            수급자는 72.5~92.5% 지원 등
-        </div>
-        <div class="col-lg-12 common-title2">
-            <p>140시간 이상 훈련과정을 수강하는 실업자 등에게 월 최대 11.6만원 지금(단위기간 1개월 출석률 80% 이상 시)</p>
+        <div class="col-lg-12 common-title2" id="married-dtl">
+            <p>
+                2<br>
+                결혼 이민자
+            </p>
         </div>
         <div class="col-lg-12 common-desc">
-            ※ 실업급여 수급 중이거나 소득이 있는 경우 등에는 일부 또는 전액 부지급
+            ● 다문화가족지원법 제2조 제2호에 따른 결혼이민자와 그 가족인 만 15세 이상 청소년<br>
+            ● 결혼이민자는 고용보험 가입 이력이 없는 실업상태여도 국민내일배움카드 발급이 가능함
+        </div>
+        <div class="col-lg-12 common-desc common-desc2">
+            <div class="caution">※ 결혼이민자 계좌발급 시 주의사항</div>
+            가족관계부를 통하여 내국민과 부부관계가 확인되어야 함
+        </div>
+        <div class="col-lg-12 common-desc common-desc2">
+            ▶ 가족관계부상 한글이름 기재<br>
+            ▶ 통장(신한,농협)의 예금주명이 한글인 상태로 개설.<br>
+            단, 신한은행에 한하여 가족관계부의 영문이름으로 통장개설 가능함<br>
+            ▶ 워크넷 구직등록 시 가족관계부상의 한글이름으로 구직등록해야 함 <br>
+            구직등록상 한글이름과 통장 예금주의 한글이름, 가족관계부 한글이름이 모두 동일시 되어야함
+        </div>
+        <div class="col-lg-12 common-title2" id="visa-dtl">
+            <p>
+                3<br>
+                비자의 종류
+            </p>
+        </div>
+        <div class="col-lg-12 common-desc">
+            ▶ 고용보험 당연적용 비자<br>
+            F-5(영주),F-2(거주),F-6(결혼이민),<br>
+            D-7(주재), D-8(기업투자), D-9(무역 경영)
+        </div>
+        <div class="col-lg-12 common-desc common-desc2 page-end-set">
+            ▶고용보험 비적용 임의적용비자<span class="caution">(내일배움카드 발급자체가 불가함)<br></span>
+            F-4(재외동포), H-2(방문취업) C-4(단기취업),<br>
+            E-1(교수), E-2(회화강사), E-3(연구), E-4(기술지도), E-5(전문직업), <br>
+            E-6(예술흥행) E-7(특정활동), E-9(비전문취업), E-10(선언취업)
         </div>
     </div>
 
-    <div class="container common-contents-box">
-        <div class="col-lg-12 common-title">
-            <p>유효기간</p>
-        </div>
-        <div class="col-lg-12 common-title2">
-            <p>계좌 발급일부터 5년</p>
-        </div>
-    </div>
-
-    <div class="container common-contents-box" id="apply-how">
-        <div class="col-lg-12 common-title">
-            <p>신청절차</p>
-        </div>
-    </div>
-
-    <div class="container process-box-main">
-            <div class="col-lg-2 process-box">
-                <div class="row process-contents-box">
-                    <div class="process-box-title">
-                    회원가입>구직신청
-                    </div>
-                    <div class="process-box-desc">
-                        고용노동부사이트<br>
-                        (https://www.hrd.go.kr)<br>
-                        회원가입 후<br>
-                        워크넷에 이력서 업로드 및 구직신청
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-1 process-next">
-                <span class="response-font">〉</span>
-                <span class="response-font2">∨</span>
-            </div>
-            <div class="col-lg-2 process-box">
-                <div class="row process-contents-box">
-                    <div class="process-box-title">
-                    내일배움카드신청
-                    </div>
-                    <div class="process-box-desc">
-                        고용노동부사이트에서<br>
-                        내일배움카드발급 신청<br>
-                        또는<br>
-                        거주지 관할<br>
-                        고용센터 방문하여 카드신청
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-1 process-next">
-                <span class="response-font">〉</span>
-                <span class="response-font2">∨</span>
-            </div>
-            <div class="col-lg-2 process-box">
-                <div class="row process-contents-box">
-                    <div class="process-box-title">
-                    카드발급
-                    </div>
-                    <div class="process-box-desc desc4">
-                        <div>카드발급확인서 지참하여</div>
-                        <div>은행방문 후 카드발급</div>
-                        
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-1 process-next">
-                <span class="response-font">〉</span>
-                <span class="response-font2">∨</span>
-            </div>
-            <div class="col-lg-2 process-box">
-                <div class="row process-contents-box">
-                    <div class="process-box-title">
-                    교육원 방문
-                    </div>
-                    <div class="process-box-desc">
-                        카드 지참 하여<br>
-                        '드림요양보호사교육원'<br>
-                        방문 후<br>
-                        상담 및 자부담수강료 결제
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-1 process-next">
-                <span class="response-font">〉</span>
-                <span class="response-font2">∨</span>
-            </div>
-            <div class="col-lg-2 process-box">
-                <div class="row process-contents-box">
-                    <div class="process-box-title">
-                    수업 참여
-                    </div>
-                    <div class="process-box-desc desc4">
-                        <div>개강일에 내일배움카드 지참하여</div>
-                        <div>수업에 참여(교재 및 시간표제공)</div>
-                    </div>
-                </div>
-            </div>
-    </div>
-
-    <div class="container col-lg-12 common-desc caution-desc">
-        ※ 유의사항<br>
-        지원여부 심사 및 상담진행이 약 2주정도 소요됩니다.<br>
-        반드시 개강일 이전에 카드를 수령할 수 있도록 서둘러주세요.<br>
-        수강인원이 제한되어 있습니다.<br>
-        조기마감될 수 있으므로 카드발급 전화 및 방문상담하여 신청가능여부 확인해주세요.
-    </div>
 
      <!--footer start-->
      <footer class="footer">
