--- a/publishing/Detail-Academy.html
+++ b/publishing/Detail-Academy.html
@@ -252,20 +252,38 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 col-sm-4">
-                    <h1>방문요양서비스</h1>
+                    <h1>국가자격증취득-교육안내</h1>
                 </div>
                 <div class="col-lg-8 col-sm-8">
-                    <ol class="breadcrumb pull-right">
-                        <li><a href="#">드림재가복지센터</a></li>
-                        <li class="active">방문요양서비스</li>
+                    <ol class="breadcrumb pull-right topmenu-set">
+                      <li class="active"><a href="#academy-time">요양보호사교육시간</a></li>
+                      <li class="active"><a href="#academy-process">표준교육과정</a></li>
+                      <li class="active"><a href="#license-process">국가자격(면허) 소지자 교육과정</a></li>
                     </ol>
                 </div>
             </div>
         </div>
     </div>
+
+    <div class="container contents1">
+      <div class="col-lg-12 main-title-p">
+          <p>드림요양보호사교육원</p>
+      </div>
+      <div class="col-lg-12 dtl-contents-box">
+            <div>저희 드림요양보호사교육원은</div>
+            <div>현직 간호사 강사와 재가복지센터의 운영자, 다른요양보호사교육원의</div>
+            <div>원장님 등 다양한 강사진으로 구성되어 질높은 교육을 진행하고 있습니다.</div>
+            <div>지역의 여러 업체들과의 협약을 통한 시니어사업 시스템을 구축하기 위해 노력하고 있습니다.</div> 
+            <div>현재 방문요양, 방문목욕, 교육원에 이르기까지 다양한 서비스를 제공하고 있으며</div>
+            <div>더 많은 곳과 함께하기 위해 노력하고 있습니다.</div> 
+      </div>
+  </div>
+
+
+
     <!--요양보호사교육기간 Title-->
 
-    <div class="container">
+    <div class="container"  id="academy-time">
         <div class="row">
             <div class="col-md-12">
                 <p class="table-title1">요양보호사교육기간</p>
@@ -437,7 +455,7 @@
 
       <!--표준교육과정 Table title-->
 
-    <div class="container">
+    <div class="container" id="academy-process">
         <div class="row">
             <div class="col-md-12">
                 <p class="table-title1">표준교육과정</p>
@@ -688,7 +706,7 @@
 
    <!--국가자격(면허)소지자 교육과정 Table title-->
 
-   <div class="container">
+   <div class="container" id="license-process">
     <div class="row">
         <div class="col-md-12">
             <p class="table-title1">국가자격(면허)소지자 교육과정</p>
