--- a/publishing/Detail-Bath.html
+++ b/publishing/Detail-Bath.html
@@ -255,9 +255,8 @@
                     <h1>방문목욕서비스</h1>
                 </div>
                 <div class="col-lg-8 col-sm-8">
-                    <ol class="breadcrumb pull-right">
-                        <li><a href="#">드림재가복지센터</a></li>
-                        <li class="active">방문목욕서비스</li>
+                    <ol class="breadcrumb pull-right topmenu-set">
+                        <li class="active"><a href="#bath-price">방문목욕이용요금</a></li>
                     </ol>
                 </div>
             </div>
@@ -265,7 +264,21 @@
     </div>
     <!--재가급여월 한도액 Title-->
 
-    <div class="container">
+    <div class="container contents1">
+        <div class="col-lg-12 main-title-p">
+            <p> 방문목욕서비스</p>
+        </div>
+        <div class="col-lg-12 dtl-contents-box">
+              <div>방문목욕서비스는</div>
+              <div>국가공인 요양보호사자격증을 소지하고있는 전문목욕요양보호사가</div>
+              <div>대상자 어르신의 집으로 목욕차를 가지고 방문하여 대상자의 신체 청결을 도와주는 서비스 입니다.</div>
+              <div>목욕전문차량 안에서 따뜻한 물로 침상목욕서비스를 해드리고 있습니다.</div> 
+              <div>집에서 목욕하기 어려우신 분, 침상에서 내려오기 힘드신 분들을 위한</div>
+              <div>서비스로 두명의 전문적인 요양보호사가 안전하게 목욕서비스 해드립니다. </div> 
+        </div>
+    </div>
+
+    <div class="container" id="bath-price">
         <div class="row">
             <div class="col-md-12">
                 <p class="detail-table-title1">방문목욕이용요금</p>
