--- a/publishing/Detail-People.html
+++ b/publishing/Detail-People.html
@@ -255,29 +255,32 @@
                     <h1>방문요양서비스</h1>
                 </div>
                 <div class="col-lg-8 col-sm-8">
-                    <ol class="breadcrumb pull-right">
-                        <li><a href="#">드림재가복지센터</a></li>
-                        <li class="active">방문요양서비스</li>
+                    <ol class="breadcrumb pull-right topmenu-set">
+                      <li class="active"><a href="#limit-price">재가급여월한도액</a></li>
+                      <li class="active"><a href="#people-price">방문요양이용요금</a></li>
                     </ol>
                 </div>
             </div>
         </div>
     </div>
 
-    <!--방문요양 소개글-->
-
-    <div class="container">
-      <div class="col-md-12">
-          <p class="introduce-p-set1">
-            저희 드림요양보호사교육원은 현직 간호사 강사와 재가복지센터의 운영자, 다른요양보호사교육원의 
-            원장님 등 다양한 강사진으로 구성되어 질높은 교육을 진행하고 있습니다.
-
-            지역의 여러 업체들과의 협약을 통한 시니어사업 시스템을 구축하기 위해 노력하고 있습니다.
-            현재 방문요양, 방문목욕, 교육원에 이르기까지 다양한 서비스를 제공하고 있으며 더 많은 곳과 함께하기 위해 노력하고 있습니다.
-          </p>
+    <div class="container contents1">
+      <div class="col-lg-12 main-title-p">
+          <p> 방문요양서비스</p>
       </div>
-  </div>
-   <!--재가급여월 한도액 Title end-->
+      <div class="col-lg-12 dtl-contents-box">
+            <div>방문요양서비스는</div>
+            <div>국가공인 요양보호사자격증을 소지하고 있는 전문 요양보호사가</div>
+            <div>대상자 어르신의 집으로 직접 방문하여 대상자의 신체, 가사, 일상생활 지원을 도와주는 서비스로,</div>
+            <div>거동이 불편하거나 치매가 걱정되는 어르신들에게 필수적인 서비스 입니다.</div> 
+            <div>드림재가복지센터는 직무교육을 받은 요양보호사선생님들로 구성되어있으며,</div>
+            <div>다양한 노하우와 체계적인 관리시스템을 통해 어르신을 위한 맞춤형 돌봄서비스를 제공합니다. </div> 
+      </div>
+    </div>
+
+
+
+    <!--방문요양 소개글-->
 
 
 
@@ -285,7 +288,7 @@
 
     <!--재가급여월 한도액 Title-->
 
-    <div class="container">
+    <div class="container" id="limit-price">
         <div class="row">
             <div class="col-md-12">
                 <p class="hcc-people-table-title1">재가급여월한도액</p>
@@ -407,7 +410,7 @@
 
       <!--재가급여월 한도액 Table-->
 
-    <div class="container">
+    <div class="container" id="people-price" >
         <div class="row">
             <div class="col-md-12">
                 <p class="hcc-people-table-title1">방문요양이용요금</p>
