--- a/publishing/Contacts.html
+++ b/publishing/Contacts.html
@@ -255,14 +255,14 @@
         <div class="row">
           <div class="col-lg-4 col-sm-4">
             <h1>
-              온라인 상담
+              오시는길
             </h1>
           </div>
           <div class="col-lg-8 col-sm-8">
-            <ol class="breadcrumb pull-right">
+            <ol class="breadcrumb pull-right topmenu-set">
               <li>
                 <a href="#">
-                  온라인상담
+                  오시는길
                 </a>
               </li>
               
