--- a/publishing/Introduce-Card-Foreigner.html
+++ b/publishing/Introduce-Card-Foreigner.html
@@ -266,7 +266,7 @@
     <!--breadcrumbs end-->
 
     <div class="container contents1">
-        <div class="col-lg-12 main-title-p">
+        <div class="col-lg-12 common-title">
             <p>외국인 내일배움카드 발급조건</p>
         </div>
         <div class="col-lg-12 dtl-contents1-box1">
