--- a/publishing/Introduce-Card-Local.html
+++ b/publishing/Introduce-Card-Local.html
@@ -255,10 +255,8 @@
                 </div>
                 <div class="col-lg-8 col-sm-8">
                     <ol class="breadcrumb pull-right topmenu-set">
-                        <li class="active">국민내일배움카드란?</li>
-                        <li class="active"><a href="#target-people">지원대상</a></li>
-                        <li class="active"><a href="#support-limit">지원한도</a></li>
-                        <li class="active"><a href="#apply-how">신청방법</a></li>
+                        <li class="active">교육과정안내</li>
+                        <li class="active">내일배움카드-내국인</li>
                     </ol>
                 </div>
             </div>
@@ -267,7 +265,7 @@
     <!--breadcrumbs end-->
 
     <div class="container contents1">
-        <div class="col-lg-12 main-title-p">
+        <div class="col-lg-12 common-title">
             <p>국민내일배움카드란?</p>
         </div>
         <div class="col-lg-12 dtl-contents1-box1">
@@ -335,7 +333,7 @@
             국민취업지원제도 Ⅱ 유형중 청ㆍ중장년층 참여자는 50~85%를, 근로장려금(EITC)<br>
             수급자는 72.5~92.5% 지원 등
         </div>
-        <div class="col-lg-12 common-title2">
+        <div class="col-lg-12 common-title2 desc-title-distance">
             <p>140시간 이상 훈련과정을 수강하는 실업자 등에게 월 최대 11.6만원 지금(단위기간 1개월 출석률 80% 이상 시)</p>
         </div>
         <div class="col-lg-12 common-desc">
