--- a/publishing/Online-Consulting.html
+++ b/publishing/Online-Consulting.html
@@ -257,7 +257,7 @@
             </h1>
           </div>
           <div class="col-lg-8 col-sm-8">
-            <ol class="breadcrumb pull-right">
+            <ol class="breadcrumb pull-right topmenu-set">
               <li>
                 <a href="#">
                   온라인상담
@@ -274,7 +274,7 @@
 
     <!--온라인상담 -title-start-->
     <div class="container">
-        <p class="counsulting-p-set1">상담신청을 남겨주세요.</p>
+        <p class="counsulting-p-set1">온라인 상담신청을 남겨주세요.</p>
         <p class="counsulting-p-set1">확인 후 담당자가 연락드리도록하겠습니다.</p>
     </div>
     <!--온라인상담 -title-end-->
