--- a/publishing/contact.html
+++ b/publishing/contact.html
@@ -257,7 +257,7 @@
             </h1>
           </div>
           <div class="col-lg-8 col-sm-8">
-            <ol class="breadcrumb pull-right">
+            <ol class="breadcrumb pull-right topmenu-set">
               <li>
                 <a href="#">
                   Contacts
