--- a/publishing/news.html
+++ b/publishing/news.html
@@ -253,10 +253,24 @@
         <div class="row">
           <div class="col-lg-4 col-sm-4">
             <h1>
-              최신뉴스
+              뉴스
             </h1>
           </div>
-          
+          <div class="col-lg-8 col-sm-8">
+            <ol class="breadcrumb pull-right topmenu-set">
+              <li>
+                <a href="#">
+                  커뮤니티
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  뉴스
+                </a>
+              </li>
+              
+            </ol>
+          </div>
         </div>
       </div>
     </div>
