--- a/publishing/photo.html
+++ b/publishing/photo.html
@@ -254,10 +254,9 @@
                     <h1>활동갤러리</h1>
                 </div>
                 <div class="col-lg-8 col-sm-8">
-                    <ol class="breadcrumb pull-right">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Portfolio</a></li>
-                        <li class="active">Portfolio 3 column</li>
+                    <ol class="breadcrumb pull-right topmenu-set">
+                        <li><a href="#">커뮤니티</a></li>
+                        <li><a href="#">활동갤러리</a></li>
                     </ol>
                 </div>
             </div>
