--- a/publishing/Welcome-Ceo.html
+++ b/publishing/Welcome-Ceo.html
@@ -251,11 +251,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 col-sm-4">
-                    <h1>인사말</h1>
+                    <a href="Welcome-Ceo.html">
+                        <h1>인사말</h1>
+                    </a>
                 </div>
                 <div class="col-lg-8 col-sm-8">
-                    <ol class="breadcrumb pull-right">
-                        <li><a href="#">교육원안내</a></li>
+                    <ol class="breadcrumb pull-right topmenu-set">
+                        <li class="active">교육원안내</li>
                         <li class="active">인사말</li>
                     </ol>
                 </div>
