--- a/publishing/Detail-Academy.html
+++ b/publishing/Detail-Academy.html
@@ -256,9 +256,9 @@
                 </div>
                 <div class="col-lg-8 col-sm-8">
                     <ol class="breadcrumb pull-right topmenu-set">
-                      <li class="active"><a href="#academy-time">요양보호사교육시간</a></li>
-                      <li class="active"><a href="#academy-process">표준교육과정</a></li>
-                      <li class="active"><a href="#license-process">국가자격(면허) 소지자 교육과정</a></li>
+                      <li class="active"><a href="Detail-Academy.html">교육원안내</a></li>
+                      <li class="active"><a href="Introduce-Card-Local.html">내국인</a></li>
+                      <li class="active"><a href="Introduce-Card-Foreigner.html">외국인</a></li>
                     </ol>
                 </div>
             </div>
@@ -285,6 +285,9 @@
 
     <div class="container"  id="academy-time">
         <div class="row">
+            <div class="col-md-12 table-line">
+              <div></div>
+            </div>
             <div class="col-md-12">
                 <p class="table-title1">요양보호사교육기간</p>
             </div>
@@ -457,6 +460,9 @@
 
     <div class="container" id="academy-process">
         <div class="row">
+            <div class="col-md-12 table-line">
+              <div></div>
+            </div>
             <div class="col-md-12">
                 <p class="table-title1">표준교육과정</p>
             </div>
@@ -708,6 +714,9 @@
 
    <div class="container" id="license-process">
     <div class="row">
+        <div class="col-md-12 table-line">
+          <div></div>
+        </div>
         <div class="col-md-12">
             <p class="table-title1">국가자격(면허)소지자 교육과정</p>
             <p class="table-title2">간호사</p>
@@ -867,6 +876,9 @@
 
    <div class="container">
     <div class="row">
+        <div class="col-md-12 table-line">
+          <div></div>
+        </div>
         <div class="col-md-12">
             <p class="table-title1">사회복지사 교육과정</p>
         </div>
@@ -1025,6 +1037,9 @@
 
 <div class="container">
   <div class="row">
+      <div class="col-md-12 table-line">
+        <div></div>
+      </div>
       <div class="col-md-12">
           <p class="table-title1">물리치료사ㆍ작업치료사ㆍ간호조무사</p>
       </div>
@@ -1036,7 +1051,7 @@
 <!--물리치료사ㆍ작업치료사ㆍ간호조무사 Table end-->
 
 <!--물리치료사ㆍ작업치료사ㆍ간호조무사 Table-->
-<div class="container">
+<div class="container table-end-set">
 <!-- /.table-responsive -->
 <div class="table-responsive">
     <table class="table table-bordered hcc-table-set1">
