--- a/publishing/Detail-Bath.html
+++ b/publishing/Detail-Bath.html
@@ -280,6 +280,9 @@
 
     <div class="container" id="bath-price">
         <div class="row">
+            <div class="col-md-12 table-line">
+                <div></div>
+              </div>
             <div class="col-md-12">
                 <p class="detail-table-title1">방문목욕이용요금</p>
             </div>
@@ -292,7 +295,7 @@
 
      <!--재가급여월 한도액 Table-->
 
-    <div class="container">
+    <div class="container table-end-set">
         <!-- /.table-responsive -->
         <div class="table-responsive">
             <table class="table table-bordered detail-set1 detail-bottom-set1">
