--- a/publishing/Detail-People.html
+++ b/publishing/Detail-People.html
@@ -290,6 +290,9 @@
 
     <div class="container" id="limit-price">
         <div class="row">
+            <div class="col-md-12 table-line">
+              <div></div>
+            </div>
             <div class="col-md-12">
                 <p class="hcc-people-table-title1">재가급여월한도액</p>
             </div>
@@ -412,6 +415,9 @@
 
     <div class="container" id="people-price" >
         <div class="row">
+          <div class="col-md-12 table-line">
+            <div></div>
+          </div>
             <div class="col-md-12">
                 <p class="hcc-people-table-title1">방문요양이용요금</p>
             </div>
