--- a/publishing/Welcome-Ceo.html
+++ b/publishing/Welcome-Ceo.html
@@ -303,8 +303,10 @@
                     감사합니다.
                 </p>
             </div>
+        
             <div class="intro-p sign">
-                대표 정의숙
+                <div class="sign-sub">드림 요양보호사교육원/드림재가복지센터</div>
+                <div>대표 정의숙</div>
             </div>
         </div>
     </div>
