--- a/publishing/index.html
+++ b/publishing/index.html
@@ -61,7 +61,7 @@
             <div class="copyright top-banner-box">
               <p class="copyright-detail-fonts">드림요양보호사교육원이궁금하시다면 온라인 상담신청하세요.</p>
               <button class="btn btn-default btn-lg top-popup-btn"><a href="Online-Consulting.html">상담예약하기</a></button>
-              <a onclick="popup_close();" class="popup-close">
+              <a href="#" onclick="popup_close();" class="popup-close">
                 <img src="img/popup-close-img.png">
               </a>
             </div>
@@ -73,7 +73,7 @@
         <div class="col-lg-12">
             <div class="copyright top-banner-box">
               <p class="copyright-detail-fonts popup-small-fonts">드림요양보호사교육원이 궁금하시다면 온라인 상담신청하세요.</p>
-              <a onclick="popup_close();" class="popup-close small-popup-close">
+              <a href="#" onclick="popup_close();" class="popup-close small-popup-close">
                 <img src="img/popup-close-img.png">
               </a>
             </div>
@@ -85,7 +85,7 @@
         <div class="col-lg-12">
             <div class="copyright top-banner-box">
               <div>드림요양보호사교육원이 <br>궁금하시다면<br>온라인 상담신청하세요.</div>
-              <a onclick="popup_close();" class="popup-close small-popup-close2">
+              <a href="#" onclick="popup_close();" class="popup-close small-popup-close2">
                 <img src="img/popup-close-img.png">
               </a>
             </div>
@@ -160,7 +160,7 @@
                       </a>
                       <ul class="dropdown-menu">
                           <li>
-                            <a href="photo.html">드림 스토리</a>
+                            <a href="photo.html">드림스토리</a>
                           </li>
                             <li>
                               <a href="news.html">뉴스</a>
@@ -343,7 +343,7 @@
           <div class="col-lg-6 col-sm-6 text-center wow fadeInLeft">
             <img src="img/property-img1.png" alt="" width="400" height="510">
           </div>
-          <div class="col-lg-6 col-sm-6 wow fadeInRight">
+          <div class="col-lg-6 col-sm-6 wow fadeInRight property-main-title">
             <h1>
               Dream
             </h1>
@@ -354,7 +354,7 @@
                 <span class="property-title">드림요양보호사교육원</span>
               </div>
               <div class="property-dec">
-              노노(老老)케어 시대에 필수가 된 요양보호사 자격증을 취득할 수 있는 교육원입니다.
+              노노<span class="chiness-fonts">(老老)</span>케어 시대에 필수가 된 요양보호사 자격증을 취득할 수 있는 교육원입니다.
               일반 수강생/ 국비지원 내일배움카드 모두 수강신청 하실 수 있습니다.
               160시간동안 수업이수, 80시간 실습을 모두 마친 후 자격증시험응시가 가능합니다.
               </div>
@@ -432,7 +432,7 @@
                         딸 결혼 기념 따뜻한 선행…안산 취약층에 성금
                       </a>
                       <p>
-                        안산 드림재가복지센터 정의숙 대표(전 안산시 단원구 중앙동 주민자치위원장)가 딸 결혼식을 기념해 취약가정을 위한 이웃돕기 성금 200만원을....
+                        안산 드림재가복지센터 정의숙 대표(전 안산시 단원구 중앙동 주민자치위원장)가 딸 결혼식을 기념해 취약가정을 ....
                       </p>
                     </div>
                   </article>
@@ -446,7 +446,7 @@
                       </a>
                       <p>
                         안산시는 6일 여성권익을 높이고 양성평등 사회조성에 기여한 여성 시민 10명을 선발해 시상했다.
-                        올해로 35번째를 맞은 안산시여성상은......
+                        올해로 ......
                       </p>
                     </div>
                   </article>
@@ -459,7 +459,7 @@
                         드림재가복지센터-고잔16단지 LH주거행복지원센터, 목욕서비스 시작
                       </a>
                       <p>
-                        드림재가복지센터(대표 정의숙)와 안산고잔16단지 LH주거행복지원센터(센터장 홍정화)가 업무협약을 체결하고 어르신들의 ....
+                        드림재가복지센터(대표 정의숙)와 안산고잔16단지 LH주거행복지원센터(센터장 홍정화)가 업무협약을 ....
                       </p>
                     </div>
                     <div class="news-more-btn">
@@ -491,7 +491,7 @@
         <div class="row">
           <div class="col-lg-12 recent">
             <h3 class="recent-work">
-              드림 스토리
+              드림스토리
             </h3>
             <p>드림요양보호사교육원 기수별 이수사진, 교육시설현황 및 강사진</p>
             <div id="owl-demo" class="owl-carousel owl-theme wow fadeIn">
@@ -652,7 +652,7 @@
               </div>
               <div class="h-service-content wow fadeInUp">
                 <h3>
-                  방문요양 서비스
+                  방문요양서비스
                 </h3>
                 <p>
                  <span class="help-subtitle">요양보호사 파견</span> <br/><span class="help-subtitle2">방문 및 돌봄 서비스가 필요하신분</span>
@@ -673,7 +673,7 @@
               </div>
               <div class="h-service-content wow fadeInUp">
                 <h3>
-                  방문목욕 서비스
+                  방문목욕서비스
                 </h3>
                 <p>
                   <span class="help-subtitle">방문목욕 서비스</span><br/> <span class="help-subtitle2">목욕차량 및 요양보호사 방문이 필요하신분</span>
