--- a/publishing/index.html
+++ b/publishing/index.html
@@ -825,26 +825,29 @@
     </script>
     <script type="text/javascript" src="js/hover-dropdown.js">
     </script>
+
     <script defer src="js/jquery.flexslider.js">
     </script>
     <script type="text/javascript" src="assets/bxslider/jquery.bxslider.js">
     </script>
 
-    <script type="text/javascript" src="js/jquery.parallax-1.1.3.js">
-    </script>
-    <script src="js/wow.min.js">
-    </script>
+    <!-- <script type="text/javascript" src="js/jquery.parallax-1.1.3.js">
+    </script> -->
+    <!-- <script src="js/wow.min.js">
+    </script> -->
     <script src="assets/owlcarousel/owl.carousel.js">
     </script>
 
-    <script src="js/jquery.easing.min.js">
-    </script>
-    <script src="js/link-hover.js">
-    </script>
-    <script src="js/superfish.js">
-    </script>
+    <!-- <script src="js/jquery.easing.min.js">
+    </script> -->
+    <!-- <script src="js/link-hover.js">
+    </script> -->
+    <!-- <script src="js/superfish.js">
+    </script> -->
     <script type="text/javascript" src="js/parallax-slider/jquery.cslider.js">
     </script>
+
+    
     <script type="text/javascript">
       $(function() {
 
@@ -860,13 +863,11 @@
 
 
     <!--common script for all pages-->
-    <script src="js/common-scripts.js">
-    </script>
+    <!-- <script src="js/common-scripts.js">
+    </script> -->
 
     <script type="text/javascript">
       jQuery(document).ready(function() {
-
-
         $('.bxslider1').bxSlider({
           minSlides: 5,
           maxSlides: 6,
@@ -899,20 +900,12 @@
       });
 
       $(document).ready(function() {
-
         $("#owl-demo").owlCarousel({
-
           items : 4
-
         });
 
       });
-
-      jQuery(document).ready(function(){
-        jQuery('ul.superfish').superfish();
-      });
-
-      new WOW().init();
+      // new WOW().init();
 
 
     </script>
