--- a/publishing/Online-Consulting.html
+++ b/publishing/Online-Consulting.html
@@ -16,12 +16,6 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/theme.css" rel="stylesheet">
     <link href="css/bootstrap-reset.css" rel="stylesheet">
-    <!--external css-->
-    <link href="assets/font-awesome/css/font-awesome.css" rel="stylesheet" />
-    <link rel="stylesheet" href="css/flexslider.css"/>
-    <link href="assets/bxslider/jquery.bxslider.css" rel="stylesheet" />
-    <link rel="stylesheet" type="text/css" href="css/animate.css">
-    <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 
 
     <!-- Custom styles for this template -->
@@ -301,6 +295,19 @@
                   <td class="desc-textarea">상담내용</td>
                   <td><textarea id="consult-desc"placeholder="" type="text"></textarea></td>
                 </tr>
+                <tr class="privacy-agree">
+                  <td></td>
+                  <td>
+                    <div class="checkbox">
+                      <label>
+                        <input type="checkbox" id="agree-btn">
+                        개인정보수집 동의
+                        </label>
+                        <a href="javascript:void(0);" onclick="privacy_popup_open();">[전문보기]</a>
+                    </div>
+                    <div>※ 개인정보 제공자가 입력한 정보는 상담 외의 다른 목적으로 활용되지않습니다.</div>
+                  </td>
+                </tr>
                 <tr>
                   <td></td>
                   <td>
@@ -315,7 +322,9 @@
       <div class="col-lg-6 main-box-set">
         <div class="row">
           <div class="main-txt">
-            드림요양보호사교육원 오시는 길
+            <a target="_blank" href="https://map.naver.com/v5/search/%EC%95%88%EC%82%B0%20%EB%93%9C%EB%A6%BC%EC%9A%94%EC%96%91%EB%B3%B4%ED%98%B8%EC%82%AC/place/38500791?c=16.3,0,0,0,dh">
+              드림요양보호사교육원 오시는 길
+              </a>
           </div>
           <div class="main-box2">
             <a target="_blank" href="https://map.naver.com/v5/search/%EC%95%88%EC%82%B0%20%EB%93%9C%EB%A6%BC%EC%9A%94%EC%96%91%EB%B3%B4%ED%98%B8%EC%82%AC/place/38500791?c=16.3,0,0,0,dh">
@@ -328,7 +337,7 @@
     <!--온라인상담 Main-end-->
 
     <!--온라인상담 하단 정보표시-->
-    <div class="container">
+    <div class="container end-set">
       <div class="col-lg-12 consult-info-box1">
           <div class="col-lg-3 consult-info-box-dtl">
             <div class="row consult-contents-box">
@@ -380,6 +389,25 @@
         </div>
     </div>
     <!--온라인상담 하단 정보표시-end-->
+
+    <!-- 개인정보 수집 모달 -->
+    <div class="modal-custom" id="privacy-dtl">
+        <div>
+          <p>개인정보 수집ㆍ이용 동의서 전문</p>
+          <a href="javascript:void(0);" onclick="privacy_popup_close();">
+            <img src="img/modal-close.png" alt="닫기">
+          </a>
+        </div>
+        <div>
+          <div>
+            <p>▶ 목적 : 드림요양보호사교육원 상담 신청에 따른 개인정보 수집</p>
+            <p>▶ 개인정보 수집 항목: 이름, 연락처</p>
+            <p>▶ 보유 및 이용기간 : 상담신청 일로 부터 3개월</p>
+            <p>▶ 개인정보 수집ㆍ이용에 동의를 거부할 권리가 있으며, 동의 거부시 온라인상담 신청이 불가합니다.</p>
+            <p class="privacy-ps">※ 개인정보 제공자가 입력한 정보는 상담 외의 다른 목적으로 활용되지 않습니다.</p>
+          </div>
+        </div>
+    </div>
     
     <!--footer start-->
     <footer class="footer">
@@ -565,70 +593,16 @@
         </div>
     </footer>
     <!--small footer end-->
-
-    <!-- js placed at the end of the document so the pages load faster -->
-    <script src="js/jquery.js">
-    </script>
-    <script src="js/bootstrap.min.js">
-    </script>
-    <script type="text/javascript" src="js/hover-dropdown.js">
-    </script>
-    <script type="text/javascript" src="assets/bxslider/jquery.bxslider.js">
-    </script>
-
-
-    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&AMP;sensor=false">
-    </script>
-
-    <!--common script for all pages-->
-    <script src="js/common-scripts.js">
-    </script>
-    <script src="js/wow.min.js">
-    </script>
+    <script src="js/jquery-3.6.0.min.js"></script>
     <script>
-      wow = new WOW(
-        {
-          boxClass:     'wow',      // default
-          animateClass: 'animated', // default
-          offset:       0          // default
+      function privacy_popup_close(){
+        $('.modal-custom').css('display','none')
+
         }
-      )
-        wow.init();
-    </script>
+        function privacy_popup_open(){
+        $('.modal-custom').css('display','block')
 
-
-    <script>
-      $(document).ready(function() {
-        //Set the carousel options
-        $('#quote-carousel').carousel({
-          pause: true,
-          interval: 4000,
         }
-                                     );
-      }
-                       );
-
-      // //google map
-      // function initialize() {
-      //   var myLatlng = new google.maps.LatLng(51.508742,-0.120850);
-      //   var mapOptions = {
-      //     zoom: 5,
-      //     center: myLatlng,
-      //     mapTypeId: google.maps.MapTypeId.ROADMAP
-      //   }
-      //       var map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
-      //   var marker = new google.maps.Marker({
-      //     position: myLatlng,
-      //     map: map,
-      //     title: 'Contact'
-      //   }
-      //                                      );
-      // }
-      // google.maps.event.addDomListener(window, 'load', initialize);
-
-
-
     </script>
-
   </body>
 </html>
